.provarCaches/00D5f000005vwGkEAI/objects/rstkf__noncashtransfer__c.object
<CustomObject>
    <description>noncashtransfer__c</description>
    <fields>
        <fullName>rstkf__noncashtransfer_rectype__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WORK</fullName>
                </value>
                <value>
                    <fullName>WORKDETAIL</fullName>
                </value>
                <value>
                    <fullName>TRIALDR</fullName>
                </value>
                <value>
                    <fullName>TRIALCR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__noncashtransfer_socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Company</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>AR Non Cash Transfer Process</relationshipLabel>
        <relationshipName>noncashtransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_crhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Cr - Cr Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_crmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Cr - Cr Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_cropenhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Cr - Cr Open Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_cropenmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Cr - Cr Open Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_cropenvalue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Cr - Cr Open Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_crvalue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Cr - Cr Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_drhomeappliedintrial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Cr - Dr Home Applied in Trial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_drmaintappliedintrial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Cr - Dr Maint Applied in Trial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_drvalueappliedintrial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Cr - Dr Value Applied in Trial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_workcr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Cr - Work Cr</label>
        <referenceTo>rstkf__noncashtransfer__c</referenceTo>
        <relationshipLabel>AR Non Cash Transfer Process (Trial Cr - Work Cr)</relationshipLabel>
        <relationshipName>trialcrs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__trialcr_workdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Cr - Work Dr</label>
        <referenceTo>rstkf__noncashtransfer__c</referenceTo>
        <relationshipLabel>AR Non Cash Transfer Process (Trial Cr - Work Dr)</relationshipLabel>
        <relationshipName>trialcrs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_crhomeappliedintrial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TrialDR - Cr Home Applied in Trial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_crmaintappliedintrial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TrialDr - Cr Maint Applied in Trial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_crvalueappliedintrial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TrialDr - Cr Value Applied in Trial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_drhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Dr - Dr Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_drmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Dr - Dr Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_dropenhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Dr - Dr Open Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_dropenmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Dr - Dr Open Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_dropenvalue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Dr - Dr Open Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_drvalue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Dr - Dr Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_workcr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Dr - Work Cr</label>
        <referenceTo>rstkf__noncashtransfer__c</referenceTo>
        <relationshipLabel>AR Non Cash Transfer Process (Trial Dr - Work Cr)</relationshipLabel>
        <relationshipName>trialdrs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__trialdr_workdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Dr - Work Dr</label>
        <referenceTo>rstkf__noncashtransfer__c</referenceTo>
        <relationshipLabel>AR Non Cash Transfer Process (Trial Dr - Work Dr)</relationshipLabel>
        <relationshipName>trialdrs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__work_arinvdue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receivable Transaction Scheduled Payment</label>
        <referenceTo>rstkf__arinvdue__c</referenceTo>
        <relationshipLabel>AR Non Cash Transfer Process</relationshipLabel>
        <relationshipName>noncashtransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__work_aritemstarthome__c</fullName>
        <label>ARItem Start Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_aritemstartmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ARItem Start Maint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_aritemstartvalue__c</fullName>
        <label>ARItem Start Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>AR Non Cash Transfer Process</relationshipLabel>
        <relationshipName>noncashtransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__work_excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__work_homeappl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Applied (Home)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_homeapplcr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Applied (Home) CR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_homeappldr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Applied (Home) DR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_homeapplproc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Applied (Home) - Proc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_homebal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ending Balance (Home)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_homebalcr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ending Balance (Home) CR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_homebaldr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ending Balance (Home) DR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_homebalproc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ending Balance (Home) - Proc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_homecurrname__c</fullName>
        <label>Func Curr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__work_ismatched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__work_key__c</fullName>
        <label>Work Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__work_maintappl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Applied (Tran)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_maintapplcr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Applied (Tran) CR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_maintappldr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Applied (Tran) DR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_maintapplproc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Applied (Maint) - Proc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_maintbal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ending Balance (Tran)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_maintbalcr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ending Balance (Tran) CR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_maintbaldr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ending Balance (Tran) DR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_maintbalproc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ending Balance (Maint) - Proc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_maintcurrname__c</fullName>
        <label>Tran Curr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__work_proj__c</fullName>
        <label>Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__work_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__work_so__c</fullName>
        <label>Sales Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__work_value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Work Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__work_valuecurr__c</fullName>
        <label>Value Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__workdetail_applyamounthomecr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apply Amount Home Cr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__workdetail_applyamounthomedr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apply Amount Home Dr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__workdetail_applyamountmaintcr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apply Amount Maint Cr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__workdetail_applyamountmaintdr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apply Amount Maint Dr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__workdetail_applyamountvaluecr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apply Amount Value Cr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__workdetail_applyamountvaluedr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apply Amount Value Dr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__workdetail_applysource__c</fullName>
        <label>Apply Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__workdetail_workcr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Cr</label>
        <referenceTo>rstkf__noncashtransfer__c</referenceTo>
        <relationshipLabel>AR Non Cash Transfer Process (Work Dr)</relationshipLabel>
        <relationshipName>workdetails2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__workdetail_workdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Dr</label>
        <referenceTo>rstkf__noncashtransfer__c</referenceTo>
        <relationshipLabel>AR Non Cash Transfer Process</relationshipLabel>
        <relationshipName>workdetails1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AR Non Cash Transfer Process</label>
    <nameField>
        <label>AR Non Cash Transfer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Non Cash Transfer Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>